# evilibc

./: .gitignore  CMakeLists.txt  README.md  TODO.md  evilibc-config.cmake  hello.c
config/: evil-config.h.in
include/: assert.h  ctype.h  errno.h  evilibc.h  inttypes.h  limits.h  math.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
os/include/os/: syscalls.h
os/linux-x86_64/: CMakeLists.txt  runtime-config.cmake
os/linux-x86_64/include/: fcntl.h  features.h  termios.h
os/linux-x86_64/src/: startup.c  syscalls.c
os/stub/: CMakeLists.txt
os/stub/src/: startup.c  syscalls.c
src/: evilibc.c
src/ctype/: ctype.c
src/errno/: errno.c
src/internal/: container_of.h  init.c  list.h  memory.c  memory.h  rand.c  rand.h  syscall.h  undefined_behavior.c  undefined_behavior.h
src/signal/: raise.c
src/stdio/: fclose.c  ferror.c  fflush.c  file.h  fopen.c  format.c  format.h  fprintf.c  fputc.c  fwrite.c  printf.c  setbuf.c  setvbuf.c  snprintf.c  sprintf.c  vfprintf.c  vsnprintf.c  vsprintf.c
src/stdio/internal/: file.h  utils.c  utils.h
src/stdlib/: abort.c
src/stdlib/malloc/: simple_list_based.c
src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
test/: CMakeLists.txt  IDBChecker.cpp  IDBChecker.h  MemoryPool.h  SyscallsMock.cpp  SyscallsMock.h  Test.cpp  Test.h  UBChecker.cpp  UBChecker.h  test_utils.h
test/internal/: rand.cpp
test/stdio/: fclose.cpp  fflush.cpp  fopen.cpp  fwrite.cpp  snprintf.cpp  sprintf.cpp  vfprintf.cpp  vsprintf.cpp
test/stdlib/: malloc.c  malloc.cpp
test/stdlib/malloc/: simple_list_based.cpp
test/string/: memchr.cpp  memcmp.cpp  memcpy.cpp  memmove.cpp  memset.cpp  strcat.cpp  strchr.cpp  strcmp.cpp  strcpy.cpp  strcspn.cpp  strerror.cpp  strlen.cpp  strncat.cpp  strncmp.cpp  strncpy.cpp  strpbrk.cpp  strrchr.cpp  strspn.cpp  strstr.cpp  strtok.cpp
tools/: coverage
